--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Tentang Maroon Souvenir - Partner Branding Terpercaya">
     <meta property="og:description"
         content="Lebih dari sekadar vendor, kami adalah partner strategis Anda dalam menciptakan corporate gift yang berkesan.">
-    <meta property="og:image" content="assets/about-team.webp">
+    <meta property="og:image" content="https://hampersmalang.web.id/assets/about-team.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/about">
     <meta property="og:type" content="website">
 
