--- a/alat-makan-kayu.html
+++ b/alat-makan-kayu.html
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Cutlery Set Kayu & Sedotan Stainless: Gaya Hidup Zero Waste">
     <meta property="og:description"
         content="Bantu karyawan dan klien Anda mengurangi sampah plastik saat makan siang. Berikan Set Alat Makan Kayu Travel yang estetis.">
-    <meta property="og:image" content="assets/alat-makan-kayu.webp">
+    <meta property="og:image" content="https://hampersmalang.web.id/assets/alat-makan-kayu.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/alat-makan-kayu">
     <meta property="og:type" content="article">
 
