--- a/beda-bahan-tumbler-stainless.html
+++ b/beda-bahan-tumbler-stainless.html
@@ -16,7 +16,7 @@
     <meta property="og:title" content="Beda Bahan Tumbler Stainless SUS 304 vs 316">
     <meta property="og:description"
         content="Jangan tertipu harga murah! Pelajari beda kualitas stainless steel agar souvenir kantor Anda aman dan awet.">
-    <meta property="og:image" content="../assets/cat-drinkware.webp">
+    <meta property="og:image" content="https://hampersmalang.web.id/assets/cat-drinkware.webp">
     <meta property="og:type" content="article">
 
     <!-- Fonts & Icons -->
