--- a/blog-2.html
+++ b/blog-2.html
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Blog Maroon Souvenir - Insight Corporate Gifting - Page 2">
     <meta property="og:description"
         content="Temukan strategi branding dan tips memilih merchandise kantor terbaik untuk perusahaan Anda.">
-    <meta property="og:image" content="assets/seminar-kit.png">
+    <meta property="og:image" content="https://hampersmalang.web.id/assets/seminar-kit.png">
     <meta property="og:url" content="https://hampersmalang.web.id/blog-2">
     <meta property="og:type" content="blog">
 
