--- a/botol-minum-aluminium.html
+++ b/botol-minum-aluminium.html
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Botol Minum Aluminium Custom: Souvenir Sporty & Awet (Grosir)">
     <meta property="og:description"
         content="Cari souvenir yang tangguh untuk event outdoor? Botol Aluminium adalah jawabannya. Ringan, anti-karat, dan bisa dibranding dengan logo full color.">
-    <meta property="og:image" content="assets/drinkware-sport.webp">
+    <meta property="og:image" content="https://hampersmalang.web.id/assets/drinkware-sport.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/botol-minum-aluminium">
     <meta property="og:type" content="article">
 
