--- a/botol-sport-aluminium.html
+++ b/botol-sport-aluminium.html
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Botol Aluminium Sport: Pilihan Tepat untuk Event Outdoor">
     <meta property="og:description"
         content="Solusi merchandise anti-pecah dan ringan untuk acara lapangan. Temukan kelebihan botol aluminium dibanding plastik.">
-    <meta property="og:image" content="assets/drinkware-sport.webp">
+    <meta property="og:image" content="https://hampersmalang.web.id/assets/drinkware-sport.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/botol-sport-aluminium">
     <meta property="og:type" content="article">
 
