--- a/buku-agenda-kerja.html
+++ b/buku-agenda-kerja.html
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Pentingnya Buku Agenda Custom untuk Produktivitas Karyawan">
     <meta property="og:description"
         content="Agenda fisik masih relevan untuk mencatat ide dan jadwal. Lihat opsi jilid spiral vs hard cover.">
-    <meta property="og:image" content="assets/executive-leather.webp">
+    <meta property="og:image" content="https://hampersmalang.web.id/assets/executive-leather.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/buku-agenda-kerja">
     <meta property="og:type" content="article">
 
