--- a/buku-agenda-notebook.html
+++ b/buku-agenda-notebook.html
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Cetak Buku Agenda Custom: Pilihan Notebook Kulit & Hardcover 2026">
     <meta property="og:description"
         content="Temukan jenis buku agenda yang tepat untuk perusahaan Anda. Dari kesan klasik Agenda Kulit hingga praktisnya Blocknote Spiral.">
-    <meta property="og:image" content="assets/executive-leather.webp">
+    <meta property="og:image" content="https://hampersmalang.web.id/assets/executive-leather.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/buku-agenda-notebook">
     <meta property="og:type" content="article">
 
