--- a/buku-daur-ulang.html
+++ b/buku-daur-ulang.html
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Buku Daur Ulang & Eco Pen: Tulis Cerita Hijau Perusahaan Anda">
     <meta property="og:description"
         content="Tinggalkan kertas putih pemutih. Beralihlah ke Notebook Daur Ulang yang estetik dan etis. Dilengkapi Pulpen Kertas biodegradable.">
-    <meta property="og:image" content="assets/eco-notebook.webp">
+    <meta property="og:image" content="https://hampersmalang.web.id/assets/eco-notebook.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/buku-daur-ulang">
     <meta property="og:type" content="article">
 
