--- a/category-drinkware.html
+++ b/category-drinkware.html
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Souvenir Tumbler & Drinkware Custom - Best Seller Corporate Gift">
     <meta property="og:description"
         content="Mulai dari Tumbler Stainless Tahan Panas hingga Mug Keramik. Solusi souvenir paling fungsional dan populer.">
-    <meta property="og:image" content="assets/cat-drinkware.webp">
+    <meta property="og:image" content="https://hampersmalang.web.id/assets/cat-drinkware.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/category-drinkware">
     <meta property="og:type" content="website">
 
