--- a/category-eco.html
+++ b/category-eco.html
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Souvenir Eco-Green & Sustainable - The Pioneer Move">
     <meta property="og:description"
         content="Tunjukkan komitmen ESG perusahaan Anda dengan souvenir ramah lingkungan. Bamboo, Recycled Paper, Jute. Premium & Meaningful.">
-    <meta property="og:image" content="assets/cat-eco.webp">
+    <meta property="og:image" content="https://hampersmalang.web.id/assets/cat-eco.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/category-eco">
     <meta property="og:type" content="website">
 
