--- a/category-executive.html
+++ b/category-executive.html
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Executive & VIP Gift Set - Hadiah Berkelas untuk Klien Prioritas">
     <meta property="og:description"
         content="Solusi bingung cari kado untuk Bos/Direksi. Leather Gift Set, Hardbox Premium, dan Signature Pen dengan inisial nama. Mewah & Eksklusif.">
-    <meta property="og:image" content="assets/cat-executive.webp">
+    <meta property="og:image" content="https://hampersmalang.web.id/assets/cat-executive.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/category-executive">
     <meta property="og:type" content="website">
 
