--- a/category-express.html
+++ b/category-express.html
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Souvenir Express & Ready Stock - Solusi Deadline Mepet">
     <meta property="og:description"
         content="Butuh souvenir besok? Kami punya stok gudang yang siap cetak kilat. Solusi penyelamat nyawa untuk event mendadak Anda.">
-    <meta property="og:image" content="assets/hero-express.webp">
+    <meta property="og:image" content="https://hampersmalang.web.id/assets/hero-express.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/category-express">
     <meta property="og:type" content="website">
 
