--- a/category-gadget.html
+++ b/category-gadget.html
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Souvenir Gadget & Tech Custom - Pilihan Gen-Z & Startup">
     <meta property="og:description"
         content="Tingkatkan citra perusahaan dengan souvenir teknologi premium. Powerbank, Flashdisk, Speaker. Garansi kualitas.">
-    <meta property="og:image" content="assets/cat-tech.webp">
+    <meta property="og:image" content="https://hampersmalang.web.id/assets/cat-tech.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/category-gadget">
     <meta property="og:type" content="website">
 
