--- a/category-lifestyle.html
+++ b/category-lifestyle.html
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Souvenir Lifestyle & Apparel Custom - Iklan Berjalan Efektif">
     <meta property="og:description"
         content="Tingkatkan brand awareness dengan souvenir yang dipakai sehari-hari. Tas, Payung, Apparel, Pouch. Kualitas Premium.">
-    <meta property="og:image" content="assets/cat-lifestyle.webp">
+    <meta property="og:image" content="https://hampersmalang.web.id/assets/cat-lifestyle.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/category-lifestyle">
     <meta property="og:type" content="website">
 
