--- a/category-seminar.html
+++ b/category-seminar.html
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Paket Seminar Kit & Training - The Cash Cow Solution">
     <meta property="og:description"
         content="Solusi Paket Hemat untuk HRD & Event Organizer. Seminar Kit Basic hingga Onboarding Kit Premium. Pengerjaan Cepat.">
-    <meta property="og:image" content="assets/cat-seminar.webp">
+    <meta property="og:image" content="https://hampersmalang.web.id/assets/cat-seminar.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/category-seminar">
     <meta property="og:type" content="website">
 
