--- a/cetak-logo-custom-satuan-grosir.html
+++ b/cetak-logo-custom-satuan-grosir.html
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Cetak Logo Custom: Teknologi Terbaik untuk Branding Anda">
     <meta property="og:description"
         content="Pahami perbedaan UV Print, Laser Grafir, dan Sablon Manual untuk hasil maksimal.">
-    <meta property="og:image" content="assets/cetak-logo-custom-satuan-grosir.webp">
+    <meta property="og:image" content="https://hampersmalang.web.id/assets/cetak-logo-custom-satuan-grosir.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/cetak-logo-custom-satuan-grosir">
     <meta property="og:type" content="article">
 
