--- a/desk-accessories-custom.html
+++ b/desk-accessories-custom.html
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Desk Accessories Custom: Bikin Meja Kerja Klien Lebih Estetik">
     <meta property="og:description"
         content="Meja kerja adalah 'real estate' branding paling mahal. Rebut area tersebut dengan Mousepad Gaming, Holder HP, dan Humidifier berlogo perusahaan Anda.">
-    <meta property="og:image" content="assets/gadget-desk.webp">
+    <meta property="og:image" content="https://hampersmalang.web.id/assets/gadget-desk.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/desk-accessories-custom">
     <meta property="og:type" content="article">
 
