--- a/etika-memberi-cinderamata-sidang-disertasi.html
+++ b/etika-memberi-cinderamata-sidang-disertasi.html
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Etika Memberi Cinderamata pada Sidang Disertasi: Jangan Salah Langkah">
     <meta property="og:description"
         content="Menghindari gratifikasi sambil tetap menunjukkan apresiasi. Simak panduan budget dan packaging yang tepat untuk momen doktoral Anda.">
-    <meta property="og:image" content="assets/etika-cinderamata-sidang.webp">
+    <meta property="og:image" content="https://hampersmalang.web.id/assets/etika-cinderamata-sidang.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/etika-memberi-cinderamata-sidang-disertasi">
     <meta property="og:type" content="article">
 
