--- a/flashdisk-kartu-promosi.html
+++ b/flashdisk-kartu-promosi.html
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Flashdisk Kartu: Kartu Nama Digital yang Multifungsi">
     <meta property="og:description"
         content="Ubah kartu nama kertas biasa menjadi USB Card canggih. Area branding luas untuk desain full color yang memukau klien Anda.">
-    <meta property="og:image" content="assets/gadget-flashdisk.webp">
+    <meta property="og:image" content="https://hampersmalang.web.id/assets/gadget-flashdisk.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/flashdisk-kartu-promosi">
     <meta property="og:type" content="article">
 
