--- a/hampers-lebaran-perusahaan.html
+++ b/hampers-lebaran-perusahaan.html
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Hampers Lebaran Perusahaan: Simbol Apresiasi di Hari Kemenangan">
     <meta property="og:description"
         content="Temukan inspirasi hampers Idul Fitri yang elegan untuk mempererat hubungan bisnis dan kekeluargaan di momen spesial.">
-    <meta property="og:image" content="assets/hampers-lebaran-kantor.webp">
+    <meta property="og:image" content="https://hampersmalang.web.id/assets/hampers-lebaran-kantor.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/hampers-lebaran-perusahaan">
     <meta property="og:type" content="article">
 
