--- a/id-card-lanyard.html
+++ b/id-card-lanyard.html
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Cetak ID Card & Tali Lanyard Custom: Identitas Event Profesional">
     <meta property="og:description"
         content="Lanyard bukan sekadar gantungan, tapi simbol identitas. Temukan perbedaan bahan Lanyard Tissue vs Polyester dan cara memilih ID Card Holder yang awet.">
-    <meta property="og:image" content="assets/seminar-basic.webp">
+    <meta property="og:image" content="https://hampersmalang.web.id/assets/seminar-basic.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/id-card-lanyard">
     <meta property="og:type" content="article">
 
