--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Vendor Hampers Malang - Parcel & Gift Set Premium">
     <meta property="og:description"
         content="Solusi hampers & parcel premium untuk perusahaan dan personal di Malang. Packaging eksklusif, kualitas terjamin.">
-    <meta property="og:image" content="assets/hero-souvenir.webp">
+    <meta property="og:image" content="https://hampersmalang.web.id/assets/hero-souvenir.webp">
     <meta property="og:url" content="https://hampersmalang.web.id">
     <meta property="og:type" content="website">
 
