--- a/jaket-hoodie-kantor.html
+++ b/jaket-hoodie-kantor.html
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Jaket Bomber & Hoodie Kantor: Seragam Modern Tim Profesional">
     <meta property="og:description"
         content="Tinggalkan blazer kaku! Saatnya beralih ke Bomber Jacket & Hoodie yang stylish untuk seragam kantor. Cek katalog bahan kami disini.">
-    <meta property="og:image" content="assets/jaket-hoodie-kantor.webp">
+    <meta property="og:image" content="https://hampersmalang.web.id/assets/jaket-hoodie-kantor.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/jaket-hoodie-kantor">
     <meta property="og:type" content="article">
 
