--- a/kaos-polo-bordir.html
+++ b/kaos-polo-bordir.html
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Polo Shirt Custom Bordir: Solusi Seragam Kantor Semi-Formal">
     <meta property="og:description"
         content="Tampil kompak dan profesional saat gathering dengan Polo Shirt Bordir. Simak panduan memilih bahan Lacoste yang nyaman disini.">
-    <meta property="og:image" content="assets/kaos-polo-bordir.webp">
+    <meta property="og:image" content="https://hampersmalang.web.id/assets/kaos-polo-bordir.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/kaos-polo-bordir">
     <meta property="og:type" content="article">
 
