--- a/katalog-souvenir-event-perusahaan.html
+++ b/katalog-souvenir-event-perusahaan.html
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Solusi Souvenir untuk Setiap Momen Perusahaan Anda">
     <meta property="og:description"
         content="Bingung memilih merchandise yang tepat untuk acara kantor? Simak katalog lengkap berdasarkan jenis event di sini.">
-    <meta property="og:image" content="assets/katalog-event-perusahaan.webp">
+    <meta property="og:image" content="https://hampersmalang.web.id/assets/katalog-event-perusahaan.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/katalog-souvenir-event-perusahaan">
     <meta property="og:type" content="article">
 
