--- a/kelebihan-mug-keramik.html
+++ b/kelebihan-mug-keramik.html
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Mug Keramik Custom: Raja Souvenir yang Tak Pernah Salah">
     <meta property="og:description"
         content="Temukan alasan mengapa mug keramik memiliki 'Lifetime Value' tertinggi dibanding merchandise lainnya untuk branding perusahaan.">
-    <meta property="og:image" content="assets/drinkware-mug.webp">
+    <meta property="og:image" content="https://hampersmalang.web.id/assets/drinkware-mug.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/kelebihan-mug-keramik">
     <meta property="og:type" content="article">
 
