--- a/konveksi-seragam-kaos.html
+++ b/konveksi-seragam-kaos.html
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Konveksi Seragam Kantor & Kaos Promosi: Kualitasjahitan Butik">
     <meta property="og:description"
         content="Seragam bukan sekadar baju, tapi identitas tim. Temukan panduan lengkap produksi seragam kantor, kaos gathering, dan jaket almamater di sini.">
-    <meta property="og:image" content="assets/konveksi-seragam-kaos.webp">
+    <meta property="og:image" content="https://hampersmalang.web.id/assets/konveksi-seragam-kaos.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/konveksi-seragam-kaos">
     <meta property="og:type" content="article">
 
