--- a/merchandise-kantor-eksklusif.html
+++ b/merchandise-kantor-eksklusif.html
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Merchandise Kantor Eksklusif: Simbol Prestise Bisnis Anda">
     <meta property="og:description"
         content="Tingkatkan nilai brand dengan souvenir premium. Pilihan tepat untuk klien VIP dan apresiasi karyawan.">
-    <meta property="og:image" content="assets/merchandise-kantor-eksklusif.webp">
+    <meta property="og:image" content="https://hampersmalang.web.id/assets/merchandise-kantor-eksklusif.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/merchandise-kantor-eksklusif">
     <meta property="og:type" content="article">
 
