--- a/merchandise-mahasiswa-baru.html
+++ b/merchandise-mahasiswa-baru.html
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Paket Merchandise Mahasiswa Baru: Solusi Pengadaan Massal Ospek/PKKMB">
     <meta property="og:description"
         content="Layanan pembuatan kit ospek skala besar (1.000+ pcs). Murah, seragam, dan on-time delivery untuk panitia PKKMB.">
-    <meta property="og:image" content="assets/souvenir-ospek-mahasiswa-baru.webp">
+    <meta property="og:image" content="https://hampersmalang.web.id/assets/souvenir-ospek-mahasiswa-baru.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/merchandise-mahasiswa-baru">
     <meta property="og:type" content="article">
 
