--- a/merchandise-perusahaan-bisnis.html
+++ b/merchandise-perusahaan-bisnis.html
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Jasa Merchandise Perusahaan: Tingkatkan Brand Awareness Bisnis Anda">
     <meta property="og:description"
         content="Strategi branding efektif lewat merchandise kantor custom. Temukan ide barang promosi yang elegan dan fungsional untuk klien.">
-    <meta property="og:image" content="assets/merchandise-perusahaan-bisnis.webp">
+    <meta property="og:image" content="https://hampersmalang.web.id/assets/merchandise-perusahaan-bisnis.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/merchandise-perusahaan-bisnis">
     <meta property="og:type" content="article">
 
