--- a/merchandise-promosi-branding.html
+++ b/merchandise-promosi-branding.html
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Merchandise Promosi & Branding: Strategi Giveaway Murah Meriah">
     <meta property="og:description"
         content="Cara efektif meningkatkan brand awareness dengan budget minim. Temukan ide souvenir pameran di bawah Rp 10.000.">
-    <meta property="og:image" content="assets/merchandise-promosi-branding.webp">
+    <meta property="og:image" content="https://hampersmalang.web.id/assets/merchandise-promosi-branding.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/merchandise-promosi-branding">
     <meta property="og:type" content="article">
 
