--- a/onboarding-kit-karyawan.html
+++ b/onboarding-kit-karyawan.html
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Onboarding Kit Karyawan: Investasi Awal untuk Loyalitas Tim">
     <meta property="og:description"
         content="Mengapa memberikan merchandise di hari pertama kerja itu penting? Temukan ide isi Welcome Kit yang efektif di sini.">
-    <meta property="og:image" content="assets/onboarding-kit-karyawan.webp">
+    <meta property="og:image" content="https://hampersmalang.web.id/assets/onboarding-kit-karyawan.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/onboarding-kit-karyawan">
     <meta property="og:type" content="article">
 
