--- a/package-conference-pro.html
+++ b/package-conference-pro.html
@@ -18,7 +18,7 @@
     <meta property="og:title" content="The Conference Pro - Paket Seminar Kit Hemat">
     <meta property="og:description"
         content="Fungsional, ekonomis, dan pasti dipakai peserta. Solusi tepat untuk event seminar kampus, workshop, atau pelatihan massal.">
-    <meta property="og:image" content="assets/seminar-kit.webp">
+    <meta property="og:image" content="https://hampersmalang.web.id/assets/seminar-kit.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/package-conference-pro">
     <meta property="og:type" content="product">
 
