--- a/package-deal-closer.html
+++ b/package-deal-closer.html
@@ -18,7 +18,7 @@
     <meta property="og:title" content="The Deal Closer - Souvenir Klien VIP & Eksekutif">
     <meta property="og:description"
         content="Hadiah yang bikin Klien VIP mustahil melupakan Anda. Sempurna untuk closing deal, apresiasi investor, atau hadiah direksi.">
-    <meta property="og:image" content="assets/cat-executive.webp">
+    <meta property="og:image" content="https://hampersmalang.web.id/assets/cat-executive.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/package-deal-closer">
     <meta property="og:type" content="product">
 
