--- a/package-earth-saver.html
+++ b/package-earth-saver.html
@@ -18,7 +18,7 @@
     <meta property="og:title" content="The Earth Saver - Souvenir Eco-Friendly & Sustainable">
     <meta property="og:description"
         content="Tunjukkan komitmen ESG perusahaan Anda lewat souvenir ramah lingkungan. Cocok untuk program CSR atau BUMN.">
-    <meta property="og:image" content="assets/cat-eco.webp">
+    <meta property="og:image" content="https://hampersmalang.web.id/assets/cat-eco.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/package-earth-saver">
     <meta property="og:type" content="product">
 
