--- a/package-employee-kit.html
+++ b/package-employee-kit.html
@@ -18,7 +18,7 @@
     <meta property="og:title" content="The New Employee Kit - Solusi Onboarding Karyawan">
     <meta property="og:description"
         content="Bikin karyawan baru merasa 'At Home' sejak hari pertama. Paket ini dirancang untuk meningkatkan moral tim dan employer branding perusahaan Anda.">
-    <meta property="og:image" content="assets/pkg-onboarding.webp">
+    <meta property="og:image" content="https://hampersmalang.web.id/assets/pkg-onboarding.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/package-employee-kit">
     <meta property="og:type" content="product">
 
