--- a/package-gift-set-premium.html
+++ b/package-gift-set-premium.html
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Paket Gift Set Premium - Agenda Kulit & Metal Pen">
     <meta property="og:description"
         content="Kombinasi klasik Agenda Kulit dan Pulpen Premium metal yang tak lekang oleh waktu. Pilihan utama untuk apresiasi profesional.">
-    <meta property="og:image" content="assets/executive-leather.webp">
+    <meta property="og:image" content="https://hampersmalang.web.id/assets/executive-leather.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/package-gift-set-premium">
     <meta property="og:type" content="product">
 
