--- a/package-hampers-exclusive.html
+++ b/package-hampers-exclusive.html
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Paket Hampers Eksklusif - Corporate Seasonal Gift">
     <meta property="og:description"
         content="Solusi kiriman hampers Hari Raya atau ucapan terima kasih tahunan. Isian bisa dicustom mix produk + cookies.">
-    <meta property="og:image" content="assets/executive-hardbox.webp">
+    <meta property="og:image" content="https://hampersmalang.web.id/assets/executive-hardbox.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/package-hampers-exclusive">
     <meta property="og:type" content="product">
 
