--- a/package-merchandise-exclusive.html
+++ b/package-merchandise-exclusive.html
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Paket Merchandise Eksklusif - Corporate Swag Kualitas Distro">
     <meta property="og:description"
         content="Merchandise branding kantor untuk dibagi ke karyawan atau dijual sebagai official merch. Kualitas premium standar distro.">
-    <meta property="og:image" content="assets/express-tumbler.webp">
+    <meta property="og:image" content="https://hampersmalang.web.id/assets/express-tumbler.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/package-merchandise-exclusive">
     <meta property="og:type" content="product">
 
