--- a/packages.html
+++ b/packages.html
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Paket Seminar Kit & Corporate Gift Set All-in-One">
     <meta property="og:description"
         content="Jangan pusing pilih souvenir satu per satu. Pilih paket terima beres kami. Sudah termasuk box, custom logo, dan pengiriman aman. Solusi HRD anti ribet.">
-    <meta property="og:image" content="assets/hero-packages.webp">
+    <meta property="og:image" content="https://hampersmalang.web.id/assets/hero-packages.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/packages">
     <meta property="og:type" content="website">
 
