--- a/paket-seminar-eksklusif.html
+++ b/paket-seminar-eksklusif.html
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Paket Seminar Kit Eksklusif Hardbox & Souvenir VIP">
     <meta property="og:description"
         content="Tingkatkan prestise acara Anda dengan seminar kit kelas atas. Paket hardbox dengan isi premium untuk pembicara dan tamu VVIP.">
-    <meta property="og:image" content="assets/seminar-premium.webp">
+    <meta property="og:image" content="https://hampersmalang.web.id/assets/seminar-premium.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/paket-seminar-eksklusif">
     <meta property="og:type" content="article">
 
