--- a/paket-seminar-kit-basic.html
+++ b/paket-seminar-kit-basic.html
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Ide Paket Seminar Kit Basic di Bawah 50 Ribu">
     <meta property="og:description"
         content="Strategi memilih kombinasi tas, pulpen, dan blocknote agar pas di kantong mahasiswa atau event massal.">
-    <meta property="og:image" content="assets/seminar-basic.webp">
+    <meta property="og:image" content="https://hampersmalang.web.id/assets/seminar-basic.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/paket-seminar-kit-basic">
     <meta property="og:type" content="article">
 
