--- a/paket-seminar-nasional-internasional.html
+++ b/paket-seminar-nasional-internasional.html
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Paket Seminar Kit Kampus: Solusi Cepat & Hemat untuk Panitia Acara">
     <meta property="og:description"
         content="Rekomendasi paket seminar kit (Tas, Blocknote, Pulpen) yang efisien untuk Seminar Nasional & Internasional. Harga mahasiswa, kualitas universitas.">
-    <meta property="og:image" content="assets/paket-seminar-nasional-internasional.webp">
+    <meta property="og:image" content="https://hampersmalang.web.id/assets/paket-seminar-nasional-internasional.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/paket-seminar-nasional-internasional">
     <meta property="og:type" content="article">
 
