--- a/panduan-lengkap-seminar-kit.html
+++ b/panduan-lengkap-seminar-kit.html
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Panduan Lengkap Memilih Seminar Kit: Strategi, Budgeting & Tren 2026">
     <meta property="og:description"
         content="Jangan salah pilih! Simak panduan komprehensif ini untuk memastikan seminar kit Anda tepat sasaran, hemat budget, dan memberikan kesan mendalam bagi peserta.">
-    <meta property="og:image" content="assets/hero-packages.webp">
+    <meta property="og:image" content="https://hampersmalang.web.id/assets/hero-packages.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/panduan-lengkap-seminar-kit">
     <meta property="og:type" content="article">
 
