--- a/powerbank-custom-souvenir.html
+++ b/powerbank-custom-souvenir.html
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Tips Memilih Powerbank Custom yang Aman untuk Souvenir">
     <meta property="og:description"
         content="Hindari powerbank abal-abal! Pelajari tentang Real Capacity dan fitur keamanan baterai agar tidak merusak reputasi Anda.">
-    <meta property="og:image" content="assets/gadget-powerbank.webp">
+    <meta property="og:image" content="https://hampersmalang.web.id/assets/gadget-powerbank.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/powerbank-custom-souvenir">
     <meta property="og:type" content="article">
 
