--- a/products.html
+++ b/products.html
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Katalog Hampers & Gift Set Premium Malang">
     <meta property="og:description"
         content="Temukan ide hampers terbaik untuk momen spesial Anda. Custom branding, harga terjangkau, kualitas premium.">
-    <meta property="og:image" content="assets/products-hero.webp">
+    <meta property="og:image" content="https://hampersmalang.web.id/assets/products-hero.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/products">
     <meta property="og:type" content="website">
 
