--- a/pulpen-promosi-custom.html
+++ b/pulpen-promosi-custom.html
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Cetak Pulpen Promosi Custom Logo: Solusi Branding Murah & Efektif">
     <meta property="og:description"
         content="Souvenir kecil dengan dampak besar. Temukan beragam jenis pulpen promosi mulai dari Rp 2.000-an untuk kebutuhan branding massal Anda.">
-    <meta property="og:image" content="assets/seminar-basic.webp">
+    <meta property="og:image" content="https://hampersmalang.web.id/assets/seminar-basic.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/pulpen-promosi-custom">
     <meta property="og:type" content="article">
 
