--- a/rekomendasi-souvenir-kantor-2026.html
+++ b/rekomendasi-souvenir-kantor-2026.html
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Rekomendasi Souvenir Kantor 2026: Tren & Ide Baru">
     <meta property="og:description"
         content="Jangan ketinggalan zaman! Simak 7 tren utama merchandise perusahaan yang akan mendominasi tahun 2026.">
-    <meta property="og:image" content="assets/cat-executive.webp">
+    <meta property="og:image" content="https://hampersmalang.web.id/assets/cat-executive.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/rekomendasi-souvenir-kantor-2026">
     <meta property="og:type" content="article">
 
